[gd_scene load_steps=33 format=4 uid="uid://dx7hafeqt4sl1"]

[ext_resource type="Script" path="res://scenes/TriangleKingRoom.gd" id="1_gpnq0"]
[ext_resource type="TileSet" uid="uid://btud2pws16bag" path="res://Textures/misc/TileSet.tres" id="1_nkb4g"]
[ext_resource type="PackedScene" uid="uid://pt57p26pop1" path="res://scenes/connected_players.tscn" id="2_ptrcr"]
[ext_resource type="Material" uid="uid://hb2ohyr3015k" path="res://resources/room_materials/purple_room.tres" id="2_xry1q"]
[ext_resource type="PackedScene" uid="uid://bdv6gh78tr2qn" path="res://scenes/enemy.tscn" id="3_5h4f3"]
[ext_resource type="Script" path="res://scripts/Triangle_boss.gd" id="3_66m4a"]
[ext_resource type="PackedScene" uid="uid://shbpwr4gt3cp" path="res://scenes/player_health_bar.tscn" id="5_8bwsw"]
[ext_resource type="Material" uid="uid://b866f4ff4lu3u" path="res://Textures/unshaded_ui_mat.tres" id="6_8ae8b"]
[ext_resource type="Texture2D" uid="uid://b2hdsm2gyh3n2" path="res://Textures/characters/triangle_boss.png" id="6_tmwhk"]
[ext_resource type="AnimationLibrary" uid="uid://b7e3c06etyhfm" path="res://animations/enemy.res" id="7_7l5vh"]
[ext_resource type="Texture2D" uid="uid://ctl6t71jflewk" path="res://Textures/characters/triangle_inactive.png" id="7_qk32x"]
[ext_resource type="Texture2D" uid="uid://dukavvigm7qyg" path="res://Textures/characters/boss_1.png" id="7_w6a1w"]
[ext_resource type="AudioStream" uid="uid://ua0ht7o1885t" path="res://sfx/Roar__007.wav" id="8_216lv"]
[ext_resource type="AudioStream" uid="uid://dnqcphrnc5ocj" path="res://sfx/Bass Drum__001.wav" id="9_bu6hf"]
[ext_resource type="PackedScene" path="res://scenes/pause_menu.tscn" id="13_ihekk"]
[ext_resource type="PackedScene" uid="uid://fja40kx2ag3p" path="res://scenes/scene_changer.tscn" id="14_6mpc5"]
[ext_resource type="PackedScene" uid="uid://b60tija8w1xw3" path="res://scenes/music_player.tscn" id="16_y2ihc"]
[ext_resource type="AudioStream" uid="uid://t27ojwy2qmng" path="res://music/Uh Oh! Final Boss!.mp3" id="17_j4xsm"]
[ext_resource type="AudioStream" uid="uid://bvm1h0cioj1em" path="res://music/bossintro3.mp3" id="18_gk3fm"]
[ext_resource type="PackedScene" path="res://scenes/door.tscn" id="19_25xff"]
[ext_resource type="PackedScene" uid="uid://drydeo6prtrfd" path="res://scenes/arrow.tscn" id="20_doseq"]

[sub_resource type="Environment" id="Environment_ykgmf"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1
fog_density = 0.7928
fog_height = 754.53
fog_height_density = -3.0877

[sub_resource type="GDScript" id="GDScript_far63"]
script/source = "extends Node2D
@onready var main_body = $Main_body
@onready var bottom_left = $Bottom_left/Enemy
@onready var bottom_right = $Bottom_right/Enemy
@onready var top_left = $Top_left/Enemy
@onready var top_right = $Top_right/Enemy
var phase = 0
# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	top_left.connect(\"has_died\", _on_top_left_enemy_dead)
	top_right.connect(\"has_died\", _on_top_right_enemy_dead)
	bottom_left.connect(\"has_died\", _on_bottom_left_enemy_dead)
	bottom_right.connect(\"has_died\", _on_bottom_right_enemy_dead)
	deactivate(bottom_left)
	deactivate(bottom_right)
	deactivate(top_left)
	deactivate(top_right)
	$Main_body.attacks = {
	0: load(\"res://scenes/Attack_patterns/inverting_arc.tscn\"),
	1: load(\"res://scenes/Attack_patterns/cross_burst.tscn\"),
	2: load(\"res://scenes/Attack_patterns/machine_arc.tscn\"),
	3: load(\"res://scenes/Attack_patterns/eight_way_burst.tscn\"),
	4: load(\"res://scenes/Attack_patterns/alternating_crosses.tscn\")
}

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func phase_update(phase: int):
	print(\"phase: \", phase)
	match phase:
		0:
			main_body_activate()
			bottom_left.active = false
			bottom_right.active = false
			top_left.active = false
			top_right.active = false
		1:
			main_body_deactivate()
			activate(top_left)
			activate(top_right)
		2:
			main_body_activate()
		3:
			main_body_deactivate()
			activate(bottom_left)
			activate(bottom_right)
		4:
			main_body_activate()
		5:
			activate(top_left)
			activate(top_right)
			activate(bottom_left)
			activate(bottom_right)


func activate(sub_boss):
	sub_boss.active = true
	sub_boss.health = 40
	sub_boss.add_to_group(\"enemy\")
	sub_boss.get_child(0).animation = \"triangle_child\"
	
func deactivate(sub_boss):
	sub_boss.active = false
	sub_boss.remove_from_group(\"enemy\")
	sub_boss.get_child(0).animation = \"triangle_deactivate\"

func main_body_activate():
	$Main_body/face.animation = \"triangleboss\"
	main_body.add_to_group(\"enemy\")
	main_body.active = true
	
func main_body_deactivate():
	$Main_body/face.animation = \"inactive\"
	main_body.remove_from_group(\"enemy\")
	main_body.active = false

func _on_main_body_next_phase() -> void:
	phase += 1
	phase_update(phase)


func _on_top_right_enemy_dead() -> void:
	deactivate(top_right)
	check_children()

func _on_top_left_enemy_dead() -> void:
	deactivate(top_left)
	check_children()

func _on_bottom_right_enemy_dead() -> void:
	deactivate(bottom_right)
	check_children()

func _on_bottom_left_enemy_dead() -> void:
	deactivate(bottom_left)
	check_children()

func check_children() -> void:
	if !top_left.active && !top_right.active && !bottom_left.active && !bottom_right.active:
		phase +=1 
		phase_update(phase)


func _on_main_body_has_died() -> void:
			deactivate(top_left)
			deactivate(top_right)
			deactivate(bottom_left)
			deactivate(bottom_right)
"

[sub_resource type="AtlasTexture" id="AtlasTexture_wskqp"]
atlas = ExtResource("7_w6a1w")
region = Rect2(0, 15, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflaq"]
atlas = ExtResource("7_w6a1w")
region = Rect2(0, 0, 16, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_uj4bg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qk32x")
}],
"loop": true,
"name": &"inactive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wskqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wskqp")
}],
"loop": false,
"name": &"spit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tmwhk")
}],
"loop": false,
"name": &"triangleboss",
"speed": 0.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oriy2"]
load_path = "res://.godot/imported/Untitled drawing.svg-53e36e70428d4913dac13bd201e04728.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_fq7qp"]
radius = 43.566

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3dy6a"]
polygon = PackedVector2Array(-3.1, -5.6, -3.1, -4.6, -5.1, -4.6, -5.1, -3.6, -6.1, -3.6, -6.1, -2.6, -7.1, -2.6, -7.1, -0.6, -8, -0.6, -8, 4.6, -7.1, 4.6, -7.1, 6.6, -6.1, 6.6, -6.1, 7.6, -5.1, 7.6, -5.1, 8.6, -3.1, 8.6, -3.1, 9.5, 3.1, 9.5, 3.1, 8.6, 5.1, 8.6, 5.1, 7.6, 6.1, 7.6, 6.1, 6.6, 7.1, 6.6, 7.1, 4.6, 8, 4.6, 8, -0.6, 7.1, -0.6, 7.1, -2.6, 6.1, -2.6, 6.1, -3.6, 5.1, -3.6, 5.1, -4.6, 4.1, -4.6, 4.1, -5.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_flv34"]
bg_color = Color(0.154876, 0.154876, 0.154876, 0.466667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwxwf"]
bg_color = Color(1, 0, 0, 0.647059)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_gp4pq"]
script/source = "extends ProgressBar


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gpnq0")

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["object"]]
z_index = -1
material = ExtResource("2_xry1q")
position = Vector2(-64, -28)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD+////AAACAAIAAAD/////AAACAAIAAAAAAP//AAACAAIAAAABAP//AAACAAIAAAAAAAAAAAACAAIAAAD//wAAAAACAAIAAAD+/wAAAAACAAIAAAD+/wEAAAACAAIAAAD//wEAAAACAAIAAAAAAAEAAAACAAIAAAABAAEAAAACAAIAAAABAAAAAAACAAIAAAACAAAAAAACAAIAAAADAAAAAAACAAIAAAAEAAAAAAADAAIAAAD8//7/AAACAAAAAAD8////AAADAAIAAAD8/wAAAAADAAIAAAD8/wEAAAADAAIAAAD8/wIAAAACAAIAAAD8/wMAAAACAAIAAAD8/wQAAAACAAIAAAD9//7/AAACAAAAAAD9////AAADAAIAAAD9/wAAAAADAAIAAAD9/wEAAAACAAIAAAD9/wIAAAACAAIAAAD9/wMAAAACAAIAAAD9/wQAAAACAAIAAAD+//7/AAACAAAAAAD+/wIAAAACAAIAAAD+/wMAAAACAAIAAAD+/wQAAAACAAIAAAD///7/AAACAAAAAAD//wIAAAACAAIAAAD//wMAAAACAAIAAAD//wQAAAACAAIAAAAAAP7/AAACAAAAAAAAAAIAAAACAAIAAAAAAAMAAAACAAIAAAAAAAQAAAACAAIAAAABAP7/AAACAAAAAAABAAIAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAACAP7/AAACAAAAAAACAP//AAACAAIAAAACAAEAAAACAAIAAAACAAIAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAADAP7/AAACAAAAAAADAP//AAACAAIAAAADAAEAAAACAAIAAAADAAIAAAACAAIAAAADAAMAAAACAAIAAAADAAQAAAACAAIAAAAEAP7/AAACAAAAAAAEAP//AAADAAIAAAAEAAEAAAACAAIAAAAEAAIAAAACAAIAAAAEAAMAAAACAAIAAAAEAAQAAAACAAIAAAD8/wUAAAADAAIAAAD9/wUAAAACAAIAAAD+/wUAAAACAAIAAAD//wUAAAACAAIAAAAAAAUAAAACAAIAAAABAAUAAAACAAIAAAACAAUAAAACAAIAAAADAAUAAAACAAIAAAAEAAUAAAACAAIAAAAFAAUAAAABAAIAAAAFAAQAAAACAAIAAAAFAAMAAAACAAIAAAAFAAIAAAACAAIAAAAFAAEAAAABAAIAAAAFAAAAAAABAAIAAAAFAP//AAABAAIAAAAFAP7/AAACAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAEAAAD4/wAAAAAAAAIAAAD4/wEAAAAAAAIAAAD4/wIAAAAAAAIAAAD4/wQAAAAAAAIAAAD4/wUAAAAAAAIAAAD4/wYAAAAAAAIAAAD4/wcAAAAAAAMAAAD4/wgAAAAAAAAAAAD5//7/AAABAAAAAAD5////AAABAAEAAAD5/wAAAAABAAIAAAD5/wEAAAADAAIAAAD5/wIAAAACAAIAAAD5/wMAAAACAAIAAAD5/wQAAAACAAIAAAD5/wUAAAADAAIAAAD5/wYAAAABAAIAAAD5/wcAAAABAAMAAAD5/wgAAAABAAQAAAD6//7/AAACAAAAAAD6////AAABAAIAAAD6/wAAAAABAAIAAAD6/wEAAAADAAIAAAD6/wIAAAACAAIAAAD6/wMAAAACAAIAAAD6/wQAAAACAAIAAAD6/wUAAAADAAIAAAD6/wYAAAABAAIAAAD6/wcAAAABAAIAAAD6/wgAAAACAAQAAAD7//7/AAACAAAAAAD7////AAADAAIAAAD7/wAAAAADAAIAAAD7/wEAAAADAAIAAAD7/wIAAAACAAIAAAD7/wMAAAACAAIAAAD7/wQAAAACAAIAAAD7/wUAAAADAAIAAAD7/wYAAAADAAIAAAD7/wcAAAADAAIAAAD7/wgAAAACAAQAAAD8/wYAAAADAAIAAAD8/wcAAAADAAIAAAD8/wgAAAACAAQAAAD9/wYAAAADAAIAAAD9/wcAAAADAAIAAAD9/wgAAAACAAQAAAD+/wYAAAACAAIAAAD+/wcAAAACAAIAAAD+/wgAAAACAAQAAAD//wYAAAACAAIAAAD//wcAAAACAAIAAAD//wgAAAACAAQAAAAAAAYAAAACAAIAAAAAAAcAAAACAAIAAAAAAAgAAAACAAQAAAABAAYAAAACAAIAAAABAAcAAAACAAIAAAABAAgAAAACAAQAAAACAAYAAAACAAIAAAACAAcAAAACAAIAAAACAAgAAAACAAQAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAQAAAAEAAYAAAADAAIAAAAEAAcAAAADAAIAAAAEAAgAAAACAAQAAAAFAAYAAAABAAIAAAAFAAcAAAABAAIAAAAFAAgAAAACAAQAAAAGAP7/AAACAAAAAAAGAP//AAABAAIAAAAGAAAAAAABAAIAAAAGAAEAAAABAAIAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAABAAIAAAAGAAYAAAABAAIAAAAGAAcAAAABAAIAAAAGAAgAAAACAAQAAAAHAP7/AAACAAAAAAAHAP//AAABAAIAAAAHAAAAAAABAAIAAAAHAAEAAAABAAIAAAAHAAIAAAACAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAIAAAAHAAUAAAABAAIAAAAHAAYAAAABAAIAAAAHAAcAAAABAAIAAAAHAAgAAAACAAQAAAAIAP7/AAADAAAAAAAIAP//AAADAAEAAAAIAAAAAAABAAIAAAAIAAEAAAABAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAAIAAQAAAACAAIAAAAIAAUAAAABAAIAAAAIAAYAAAABAAIAAAAIAAcAAAADAAMAAAAIAAgAAAADAAQAAAAJAP7/AAAAAAAAAAAJAP//AAAEAAEAAAAJAAAAAAAEAAIAAAAJAAEAAAAEAAIAAAAJAAIAAAAEAAIAAAAJAAMAAAAGAAMAAFAJAAQAAAAEAAIAAAAJAAUAAAAEAAIAAAAJAAYAAAAEAAIAAAAJAAcAAAAEAAMAAAAJAAgAAAAAAAAAAAD4/wMAAAAGAAMAAGA=")
tile_set = ExtResource("1_nkb4g")

[node name="TileMapLayer2" type="TileMapLayer" parent="." groups=["object", "pillar"]]
z_index = -1
material = ExtResource("2_xry1q")
position = Vector2(-64, -28)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAAMAAAAGAAQAAAD9/wMAAAAGAAQAAAA=")
tile_set = ExtResource("1_nkb4g")

[node name="Arrow" parent="." instance=ExtResource("20_doseq")]
position = Vector2(-448, 198)
rotation = -1.5708

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.674815, 0.674815, 0.674815, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 180)
rotation = 0.00103694
scale = Vector2(0.512807, 0.292644)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ykgmf")

[node name="main_boss" type="Node2D" parent="."]
position = Vector2(0, 180)
rotation = -3.14159
script = SubResource("GDScript_far63")
metadata/_edit_group_ = true

[node name="Cooldown" type="Timer" parent="main_boss"]
wait_time = 2.0
autostart = true

[node name="Main_body" type="CharacterBody2D" parent="main_boss" groups=["enemy"]]
position = Vector2(-1.0252e-05, -4)
rotation = -3.14159
scale = Vector2(1, 0.982383)
script = ExtResource("3_66m4a")
enemy_name = "triangleboss"

[node name="face" type="AnimatedSprite2D" parent="main_boss/Main_body"]
z_index = 1
material = ExtResource("6_8ae8b")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_uj4bg")
animation = &"inactive"

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_boss/Main_body/face"]
libraries = {
"": ExtResource("7_7l5vh")
}

[node name="Sprite2D2" type="Sprite2D" parent="main_boss/Main_body"]
visible = false
modulate = Color(0, 1, 1, 1)
position = Vector2(0, -50.0525)
scale = Vector2(0.251833, 0.254175)
texture = SubResource("CompressedTexture2D_oriy2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_boss/Main_body"]
rotation = 0.00182393
shape = SubResource("CircleShape2D_fq7qp")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="main_boss/Main_body"]
position = Vector2(-2.53518e-05, -10)
scale = Vector2(5, 5)
occluder = SubResource("OccluderPolygon2D_3dy6a")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="main_boss/Main_body"]
stream = ExtResource("8_216lv")
bus = &"SFX"

[node name="Damage_sound" type="AudioStreamPlayer2D" parent="main_boss/Main_body"]
stream = ExtResource("9_bu6hf")

[node name="Top_right" parent="main_boss" groups=["sub-boss"] instance=ExtResource("3_5h4f3")]
position = Vector2(-416, 180.001)
rotation = 3.14159

[node name="Top_left" parent="main_boss" groups=["sub-boss"] instance=ExtResource("3_5h4f3")]
position = Vector2(423, 190.999)
rotation = 3.14159

[node name="Bottom_right" parent="main_boss" groups=["sub-boss"] instance=ExtResource("3_5h4f3")]
position = Vector2(-416.001, -227.999)
rotation = 6.28318

[node name="Bottom_left" parent="main_boss" groups=["sub-boss"] instance=ExtResource("3_5h4f3")]
position = Vector2(420.999, -228.001)

[node name="Players" parent="." instance=ExtResource("2_ptrcr")]
z_index = 1
position = Vector2(480, 200)
rotation = 0.00103694
change_pos_for_vertical = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealth" parent="CanvasLayer" instance=ExtResource("5_8bwsw")]
modulate = Color(1, 1, 1, 0.760784)
offset_left = 4.0
offset_top = 4.0
offset_right = 53.0
offset_bottom = 13.0
scale = Vector2(6, 6)
pivot_offset = Vector2(3.16063e-05, 0.00147909)

[node name="BossHealth" type="ProgressBar" parent="CanvasLayer"]
material = ExtResource("6_8ae8b")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.0
offset_top = -42.0
offset_right = 227.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_flv34")
theme_override_styles/fill = SubResource("StyleBoxFlat_xwxwf")
max_value = 400.0
step = 1.0
value = 400.0
show_percentage = false
script = SubResource("GDScript_gp4pq")

[node name="Label" type="Label" parent="CanvasLayer/BossHealth"]
material = ExtResource("6_8ae8b")
layout_mode = 0
offset_top = -23.0
offset_right = 40.0
text = "Triangle King"

[node name="pause_menu" parent="." instance=ExtResource("13_ihekk")]
visible = false

[node name="SceneChanger" parent="." instance=ExtResource("14_6mpc5")]
visible = false

[node name="MusicPlayer" parent="." instance=ExtResource("16_y2ihc")]
stream = ExtResource("17_j4xsm")

[node name="BossIntro" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("18_gk3fm")
autoplay = true
bus = &"Music"

[node name="Door" parent="." instance=ExtResource("19_25xff")]
position = Vector2(-480, 200)
rotation = -1.5708
scene_file = "res://scenes/end_cutscene.tscn"
shader_pos = Vector2(-0.3, 0.5)

[connection signal="timeout" from="main_boss/Cooldown" to="main_boss/Main_body" method="_on_cooldown_timeout"]
[connection signal="has_died" from="main_boss/Main_body" to="main_boss" method="_on_main_body_has_died"]
[connection signal="next_phase" from="main_boss/Main_body" to="main_boss" method="_on_main_body_next_phase"]
